Fix miskey-header z-index bug

--- a/src/sites/desktop/common/styles/ui.less
+++ b/src/sites/desktop/common/styles/ui.less
@@ -89,7 +89,7 @@ body {
 #misskey-header {
 	position: fixed;
 	top: 0;
-	z-index: 1024;
+	z-index: 1025;
 	width: 100%;
 	//box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1);
 	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
